# internal/modules/inventory/stock/handler.go
@@ -1,0 +1,59 @@
+package stock
+
+import (
+	"math"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/tamim1715/novaerp/internal/common/pagination"
+	"github.com/tamim1715/novaerp/internal/common/response"
+)
+
+type Handler struct {
+	service Service
+}
+
+func NewHandler(service Service) *Handler {
+	return &Handler{service: service}
+}
+
+func (h *Handler) FindAllStocks(c *gin.Context) {
+	var req pagination.PageRequest
+	if err := c.ShouldBindQuery(&req); err != nil {
+		response.Error(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	stocks, total, err := h.service.FindAllStocks(c.Request.Context(), req)
+	if err != nil {
+		response.Error(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	req.Normalize()
+	pageResponse := pagination.PageResponse{
+		Page:       req.Page,
+		Size:       req.Size,
+		TotalItems: total,
+		TotalPages: int(math.Ceil(float64(total) / float64(req.Size))),
+		Data:       ToStockResponseList(stocks),
+	}
+
+	response.Success(c, "Stock records fetched successfully", pageResponse)
+}
+
+func (h *Handler) AdjustStock(c *gin.Context) {
+	var req AdjustStockRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		response.Error(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	stk, err := h.service.AdjustStock(c.Request.Context(), req)
+	if err != nil {
+		response.Error(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	response.Success(c, "Stock adjusted successfully", ToStockResponse(stk))
+}
